[FDCORE-7632] - Alignment issue in Ticket Templates and Inherit Parent Option
Alignment issue in Ticket Templates and Inherit Parent Option

--- a/public/src/falcon/falcon-common.scss
+++ b/public/src/falcon/falcon-common.scss
@@ -1555,6 +1555,23 @@ div[class$="-toggle"]{
 }
 
 
+/* child template icon fix */
+
+.ticket-template-list .tkt-template-table .action-btn {
+  padding-left: 0px;
+}
+
+#ticket-template-wrapper .child-form {
+    width: 92%;
+    margin: auto;
+    
+    .default_subject, .default_tags {
+      .options-wrapper {
+        left: 0;
+      }
+    }
+}
+
 @import "falcon-community";
 @import "falcon-reports";
 @import "falcon-livechat";
